--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
+    "svg.js": "^2.6.5",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
